fix height on mobile

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body {
   align-items: center;
   justify-content: center;
 
-  height: 100vh;
   font-size: 2em;
   font-family: monospace;
 
@@ -24,7 +23,7 @@ body {
 
 main {
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 
 #noteLabel {
@@ -74,6 +73,7 @@ main {
   right: 0;
   transition: all 0.5s;
   right: -250px;
+  height: 100%;
 }
 
 #menu.open {
@@ -97,11 +97,14 @@ main {
 }
 
 #menu_body {
-  background: red;
   float: right;
-  height: 100vh;
+  height: 100%;
   width: 250px;
   background: #00000060;
+  overflow-y: scroll;
+}
+#menu_body::-webkit-scrollbar {
+  display: none;
 }
 
 #menu_body > div {
@@ -112,6 +115,10 @@ main {
   cursor: pointer;
   margin-top: 18px;
   font-size: 1.4rem;
+}
+
+#menu_toggler {
+  height: 100%;
 }
 
 #menu_overlay {
